[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/customNodes/InteractionableBox.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/switch/Hebel.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/switch/Switch.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Switch/Menu_Select_00.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Switch/Alarm_Loop_01.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/ui/keyIcons/EButton.png" type="Texture" id=6]
[ext_resource path="res://assets/light/light.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[node name="Switch" type="Node2D"]
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.370536, 0.370536 )
texture = ExtResource( 7 )
texture_scale = 0.7
color = Color( 0.223529, 0.984314, 0.984314, 1 )
energy = 3.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 62, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="InteractionableBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionableBox"]
shape = SubResource( 1 )

[node name="Prompt" type="Sprite" parent="InteractionableBox"]
light_mask = 0
material = SubResource( 2 )
position = Vector2( 0, -83 )
scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 6 )

[node name="RandomPause" type="Timer" parent="."]
one_shot = true

[node name="SwitchOnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
max_distance = 10000.0
bus = "Sound Effects"

[node name="SwitchOffSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 10000.0
bus = "Sound Effects"

[connection signal="interacted" from="InteractionableBox" to="." method="_on_InteractionableBox_interacted"]
[connection signal="timeout" from="RandomPause" to="." method="_on_RandomPause_timeout"]
